definition of loading functions, expansion to 4 imputs

--- a/b1_map.ipynb
+++ b/b1_map.ipynb
@@ -36,6 +36,9 @@
     "\n",
     "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "\n",
     "k=fileRCR[loc].keys()\n",
     "d=dict(fileRCR[loc].classes()) # shows the type of each item\n",
     "dict(fileRCR[loc]) # keys : values\n",
@@ -71,41 +74,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize a nparray: best way is to know the size in advance\n",
-    "# MFPAD_RCR=np.zeros((72,2))\n",
-    "# ctetha_RCR=np.zeros((72,2))\n",
+    "def cosphi_func(key, cosphi):\n",
+    "    ctheta_nc = float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
+    "    phi_nc = float((str(key).split(\"phi_\")[1]).split(\";\")[0])\n",
+    "    # alternative method with import re\n",
+    "    #ctheta_n=re.search(\"costheta_(.*)_phi\", str(key)).group(1)\n",
+    "    cosphi.append((ctheta_nc, phi_nc))\n",
+    "    return cosphi\n",
     "\n",
-    "MFPAD_RCR=[] # initilialises a list\n",
-    "ctetha_RCR=[]\n",
-    "cosphi=[]\n",
-    "MFPAD_xy=[]\n",
-    "run_one=0\n",
-    "for key, value in fileRCR[loc].items():\n",
+    "def import_MFPAD(file, MFPAD, cosphi, MFPAD_xy, ctetha, ctheta_x, run_one=0):\n",
+    "    \"\"\"\n",
+    "    Loads the MFPADs and the cos(theta) from the .root files.\n",
+    "    6 inputs + a parameter\n",
+    "    NOTE: MFPAD_xy and ctheta have originally +1 dimensions compare to the z values.\n",
+    "    For the sake of iminiut, cos(theta) is centered on the middle of the bins.\n",
+    "    \"\"\"\n",
+    "    for key, value in file[loc].items():\n",
     "        filename=loc+\"/\"+str(key).split(\";\")[0].replace(\"b'\",\"\")\n",
     "        if \"mfpad3d_engate_costheta\" in filename.lower():\n",
     "            # print(filename)\n",
-    "            ctheta_nm=float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
-    "            phi_nm=float((str(key).split(\"phi_\")[1]).split(\";\")[0])\n",
-    "            # phicos.append((ctheta_nm,phi_nm))\n",
-    "            cosphi.append((ctheta_nm+0.1666,phi_nm+15)) # centered in the middle of the bins\n",
-    "            #ctheta_n=re.search(\"costheta_(.*)_phi\", str(key)).group(1) #alternative with import re\n",
-    "            temp=np.array(fileRCR[filename].numpy())\n",
-    "            MFPAD_RCR.append(temp[0]) # it is a list!\n",
+    "            cosphi=cosphi_func(key,cosphi)\n",
+    "            temp=np.array(file[filename].numpy())\n",
+    "            MFPAD.append(temp[0]) # it is a list!\n",
     "            if run_one == 0:\n",
     "                MFPAD_xy.append((temp[1][0][0] , temp[1][0][1])) # phi cos(theta) from 2D\n",
     "                run_one=1\n",
     "        elif \"cos(theta)\" in filename.lower():\n",
-    "            ctheta_nc=float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
-    "            temp=np.array(fileRCR[filename].numpy())\n",
-    "            ctetha_RCR.append(temp[0]) # it is a list!\n",
-    "            ctheta_c = temp[1] # cos(theta) from 1D\n",
-    "MFPAD_RCR=np.array(MFPAD_RCR)\n",
-    "ctetha_RCR=np.array(ctetha_RCR) # it is a list!\n"
+    "            temp=np.array(file[filename].numpy())\n",
+    "            ctetha.append(temp[0]) # it is a list!\n",
+    "            if run_one == 0:\n",
+    "                ctheta_x = temp[1] # cos(theta) from 1D\n",
+    "                run_one=1\n",
+    "    MFPAD=np.array(MFPAD)\n",
+    "    cosphi=np.array(cosphi)\n",
+    "    MFPAD_xy=np.array(MFPAD_xy) # if it should be reduced of 1 dimension use #reduced of 1 dimension\n",
+    "    ctetha=np.array(ctetha)\n",
+    "    ctheta_x=np.array((ctheta[1:] + ctheta[:-1])/2) #! NOTE: reduced of 1 dimension"
    ]
   },
   {
@@ -114,32 +121,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MFPAD_RCL=[] # initilialises a list\n",
-    "ctetha_RCL=[]\n",
+    "# initilialises a list\n",
+    "MFPAD_RCR=[]; ctetha_RCR=[]\n",
+    "MFPAD_RCL=[]; ctetha_RCL=[]\n",
+    "MFPAD_SCR=[]; ctetha_SCR=[]\n",
+    "MFPAD_SCL=[]; ctetha_SCL=[]\n",
+    "\n",
     "cosphi=[]\n",
     "MFPAD_xy=[]\n",
-    "run_one=0\n",
-    "for key, value in fileRCL[loc].items():\n",
-    "        filename=loc+\"/\"+str(key).split(\";\")[0].replace(\"b'\",\"\")\n",
-    "        if \"mfpad3d_engate_costheta\" in filename.lower():\n",
-    "            # print(filename)\n",
-    "            ctheta_nm=float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
-    "            phi_nm=float((str(key).split(\"phi_\")[1]).split(\";\")[0])\n",
-    "            # phicos.append((ctheta_nm,phi_nm)) #they are inverted\n",
-    "            cosphi.append((ctheta_nm+0.1666,phi_nm+15))  # centered in the middle of the bins\n",
-    "            #ctheta_n=re.search(\"costheta_(.*)_phi\", str(key)).group(1) #alternative with import re\n",
-    "            temp=np.array(fileRCL[filename].numpy())\n",
-    "            MFPAD_RCL.append(temp[0]) # it is a list!\n",
-    "            if run_one == 0:\n",
-    "                MFPAD_xy.append((temp[1][0][0] , temp[1][0][1])) # phi cos(theta) from 2D\n",
-    "                run_one=1\n",
-    "        elif \"cos(theta)\" in filename.lower():\n",
-    "            ctheta_nc=float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
-    "            temp=np.array(fileRCL[filename].numpy())\n",
-    "            ctetha_RCL.append(temp[0]) # it is a list!\n",
-    "            ctheta_c = temp[1] # cos(theta) from 1D\n",
-    "MFPAD_RCL=np.array(MFPAD_RCL)\n",
-    "ctetha_RCL=np.array(ctetha_RCL) # it is a list!"
+    "ctheta_cred=[]\n",
+    "\n",
+    "import_MFPAD(fileRCR, MFPAD_RCR, cosphi, MFPAD_xy, ctetha_RCR, ctheta_cred, run_one=0)\n",
+    "import_MFPAD(fileRCL, MFPAD_RCL, cosphi, MFPAD_xy, ctetha_RCL, ctheta_cred, run_one=0)\n",
+    "import_MFPAD(fileSCR, MFPAD_SCR, cosphi, MFPAD_xy, ctetha_SCR, ctheta_cred, run_one=0)\n",
+    "import_MFPAD(fileSCL, MFPAD_SCL, cosphi, MFPAD_xy, ctetha_SCL, ctheta_cred, run_one=0)"
    ]
   },
   {
@@ -214,8 +209,8 @@
    },
    "outputs": [],
    "source": [
-    "ctheta_cred = (ctheta_c[1:] + ctheta_c[:-1])/2\n",
-    "print(ctheta_cred.shape)"
+    "# ctheta_cred = (ctheta_c[1:] + ctheta_c[:-1])/2\n",
+    "# print(ctheta_cred.shape)"
    ]
   },
   {
