higher bins, plotly fixed

--- a/contrast_map.ipynb
+++ b/contrast_map.ipynb
@@ -32,12 +32,12 @@
    "outputs": [],
    "source": [
     "#low binning\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "# fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].keys()\n",
-    "# dict(fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].classes())\n",
-    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")"
+    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "# # fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].keys()\n",
+    "# # dict(fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].classes())\n",
+    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")"
    ]
   },
   {
@@ -47,10 +47,10 @@
    "outputs": [],
    "source": [
     "#high binning\n",
-    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")"
+    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")"
    ]
   },
   {
@@ -216,7 +216,9 @@
     "ctheta_cred = (costheta_nhistSCL[1:] + costheta_nhistSCL[:-1])/2\n",
     "phi_cred = (phi_nhistSCL[1:] + phi_nhistSCL[:-1])/2\n",
     "\n",
-    "fig = go.Figure(data=go.Contour(x=phi_cred, y=ctheta_cred, z=PECD.T, line_smoothing=0.85, colorscale=Seismic_r, contours=dict(start=-0.08, end=0.08, size=0.02) ))\n",
+    "fig = go.Figure(data=go.Contour(x=phi_cred, y=ctheta_cred, z=PECD.T, line_smoothing=0.85, colorscale=Seismic_r,\n",
+    "contours=dict(start=-0.10, end=0.10, size=0.025) \n",
+    "))\n",
     "\n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
