1d graphs of single variables, titles

--- a/3D_MFPADs.ipynb
+++ b/3D_MFPADs.ipynb
@@ -79,6 +79,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fig = plt.figure(figsize=plt.figaspect(0.15))\n",
+    "# alternative sintax\n",
+    "fig = plt.figure(figsize=(40,10))\n",
+    "# ax = fig.gca(projection='3d')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 1)\n",
+    "# ax.scatter(x)\n",
+    "ax.plot(ctheta)\n",
+    "ax.title.set_text('ctheta axis')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 2)\n",
+    "ax.plot(np.unique(ctheta))\n",
+    "ax.title.set_text('ctheta axis unique')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 3)\n",
+    "# ax.scatter(y)\n",
+    "ax.plot(phi)\n",
+    "ax.title.set_text('phi axis')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 4)\n",
+    "ax.plot(np.unique(phi))\n",
+    "ax.title.set_text('phi axis unique')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 5)\n",
+    "# ax.scatter(z)\n",
+    "ax.plot(counts)\n",
+    "ax.title.set_text('counts axis')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 6)\n",
+    "ax.plot(ctheta,phi)\n",
+    "ax.title.set_text('ctheta vs phi')\n",
+    "\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"phi min max\", np.min(phi), np.max(phi))\n",
+    "print(\"ctetha min max\", np.min(ctheta), np.max(ctheta))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig = plt.figure(figsize=plt.figaspect(0.15))\n",
+    "# alternative sintax\n",
+    "fig = plt.figure(figsize=(40,10))\n",
+    "# ax = fig.gca(projection='3d')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 1)\n",
+    "# ax.scatter(x)\n",
+    "ax.plot(x)\n",
+    "ax.title.set_text('x axis')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 2)\n",
+    "ax.plot(np.unique(x))\n",
+    "ax.title.set_text('x axis unique')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 3)\n",
+    "# ax.scatter(y)\n",
+    "ax.plot(y)\n",
+    "ax.title.set_text('y axis')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 4)\n",
+    "ax.plot(np.unique(y))\n",
+    "ax.title.set_text('y axis unique')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 5)\n",
+    "# ax.scatter(z)\n",
+    "ax.plot(z)\n",
+    "ax.title.set_text('z axis')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 6, 6)\n",
+    "ax.plot(x,y)\n",
+    "ax.title.set_text('x vs y')\n",
+    "\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig = plt.figure(figsize=plt.figaspect(0.25))\n",
     "# alternative sintax\n",
     "# fig = plt.figure()\n",
@@ -86,16 +182,20 @@
     "\n",
     "ax = fig.add_subplot(1, 4, 1, projection='3d')\n",
     "ax.scatter(x, y, z, c=d, cmap='viridis', alpha=0.2) # X,Y,Z 1D vectors -> everything ok\n",
+    "ax.title.set_text('scattered with c colour')\n",
     "\n",
     "ax = fig.add_subplot(1, 4, 2, projection='3d')\n",
     "ax.plot_wireframe(X,Y,Z)\n",
+    "ax.title.set_text('wired')\n",
     "\n",
     "ax = fig.add_subplot(1, 4, 3, projection='3d')\n",
     "verts = [list(zip(x, y, z))]\n",
     "ax.plot_trisurf(x, y, z, triangles=verts, antialiased=True)\n",
+    "ax.title.set_text('triagnulated')\n",
     "\n",
     "ax = fig.add_subplot(1, 4, 4, projection='3d')\n",
     "ax.plot(x, y, z, antialiased=True)\n",
+    "ax.title.set_text('Simple plot')\n",
     "\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -112,10 +212,39 @@
     "\n",
     "ax = fig.add_subplot(1, 2, 1, projection='3d')\n",
     "ax.plot_surface(X,Y,Z)\n",
+    "ax.title.set_text('surface (broken on the side)')\n",
+    "\n",
     "\n",
     "ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
     "cs = ax.contour(X,Y,d_matrix, levels=30)\n",
     "cs.changed()\n",
+    "ax.title.set_text('contour in 3D')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xt = np.reshape(x, (100, 200))\n",
+    "Yt = np.reshape(y, (100, 200))\n",
+    "Zt = np.reshape(z, (100, 200))\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "fig, ax = plt.subplots(1,2, subplot_kw={\"projection\": \"3d\"}, figsize=(20,10))\n",
+    "\n",
+    "ax = fig.add_subplot(1, 2, 1, projection='3d')\n",
+    "ax.plot_surface(Xt,Yt,Zt)\n",
+    "ax.title.set_text('surface transposed')\n",
+    "\n",
+    "ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
+    "cs = ax.contour(Xt,Yt,d_matrix.T, levels=30)\n",
+    "cs.changed()\n",
+    "ax.title.set_text('contour transposed')\n",
+    "\n",
     "\n",
     "plt.show()"
    ]
@@ -142,6 +271,7 @@
     "ax.set_ylim3d(y.min(), y.max())\n",
     "ax.set_zlabel('z')\n",
     "ax.set_zlim3d(z.min(), z.max())\n",
+    "ax.title.set_text(\"scattered with contour projections alpha=0.44\")\n",
     "\n",
     "plt.show()\n"
    ]
@@ -176,6 +306,7 @@
     "ax.set_ylim3d(y.min(), y.max())\n",
     "ax.set_zlabel('z')\n",
     "ax.set_zlim3d(z.min(), z.max())\n",
+    "ax.title.set_text(\"scattered with contour projections alpha=0.5\")\n",
     "\n",
     "plt.show()"
    ]
@@ -190,13 +321,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit (conda)",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.5 64-bit (conda)"
+   "name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
