inserted path the high and low binning (new corrected version)

--- a/b1_map_CH9.ipynb
+++ b/b1_map_CH9.ipynb
@@ -34,10 +34,23 @@
     "\n",
     "loc = \"angular_distr_el/CH9/ID_ALL_mol_e0_valid/EN_gate/MFPADs_multinew_std\"\n",
     "\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# #low old binning (wrong?)\n",
+    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "\n",
+    "#low new binning\n",
+    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "\n",
+    "# #high neew binning\n",
+    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
     "\n",
     "k=fileRCR[loc].keys()\n",
     "d=dict(fileRCR[loc].classes()) # shows the type of each item\n",
@@ -85,7 +98,7 @@
     "    cosphi.append((ctheta_nc, phi_nc))\n",
     "    return cosphi\n",
     "\n",
-    "def import_MFPAD(file, MFPAD, cosphi, MFPAD_xy, ctetha, ctheta_x, run_one=0):\n",
+    "def import_MFPAD(file, MFPAD, cosphi, MFPAD_xy, ctetha, ctheta_c, ctheta_cred, run_one=0):\n",
     "    \"\"\"\n",
     "    Loads the MFPADs and the cos(theta) from the .root files.\n",
     "    6 inputs + a parameter\n",
@@ -106,13 +119,13 @@
     "            temp=np.array(file[filename].numpy())\n",
     "            ctetha.append(temp[0]) # it is a list!\n",
     "            if run_one == 0:\n",
-    "                ctheta_x = temp[1] # cos(theta) from 1D\n",
+    "                ctheta_c = temp[1] # cos(theta) from 1D\n",
+    "                ctheta_cred=np.array((ctetha_c[1:] + ctetha_c[:-1])/2) #! NOTE: reduced of 1 dimension\n",
     "                run_one=1\n",
     "    MFPAD=np.array(MFPAD)\n",
     "    cosphi=np.array(cosphi)\n",
     "    MFPAD_xy=np.array(MFPAD_xy) # if it should be reduced of 1 dimension use #reduced of 1 dimension\n",
-    "    ctetha=np.array(ctetha)\n",
-    "    ctheta_x=np.array((ctheta[1:] + ctheta[:-1])/2) #! NOTE: reduced of 1 dimension"
+    "    ctetha=np.array(ctetha)"
    ]
   },
   {
@@ -122,19 +135,25 @@
    "outputs": [],
    "source": [
     "# initilialises a list\n",
-    "MFPAD_RCR=[]; ctetha_RCR=[]\n",
-    "MFPAD_RCL=[]; ctetha_RCL=[]\n",
-    "MFPAD_SCR=[]; ctetha_SCR=[]\n",
-    "MFPAD_SCL=[]; ctetha_SCL=[]\n",
+    "MFPAD_RCR=[]; ctetha_RCR=[]; ctheta_xaxis_RCR=[]\n",
+    "MFPAD_RCL=[]; ctetha_RCL=[]; ctheta_xaxis_RCL=[]\n",
+    "MFPAD_SCR=[]; ctetha_SCR=[]; ctheta_xaxis_SCR=[]\n",
+    "MFPAD_SCL=[]; ctetha_SCL=[]; ctheta_xaxis_SCL=[]\n",
     "\n",
     "cosphi=[]\n",
     "MFPAD_xy=[]\n",
     "ctheta_cred=[]\n",
     "\n",
-    "import_MFPAD(fileRCR, MFPAD_RCR, cosphi, MFPAD_xy, ctetha_RCR, ctheta_cred, run_one=0)\n",
-    "import_MFPAD(fileRCL, MFPAD_RCL, cosphi, MFPAD_xy, ctetha_RCL, ctheta_cred, run_one=0)\n",
-    "import_MFPAD(fileSCR, MFPAD_SCR, cosphi, MFPAD_xy, ctetha_SCR, ctheta_cred, run_one=0)\n",
-    "import_MFPAD(fileSCL, MFPAD_SCL, cosphi, MFPAD_xy, ctetha_SCL, ctheta_cred, run_one=0)"
+    "import_MFPAD(fileRCR, MFPAD_RCR, cosphi, MFPAD_xy, ctetha_RCR, ctheta_xaxis_RCR, ctheta_cred, run_one=0)\n",
+    "import_MFPAD(fileRCL, MFPAD_RCL, cosphi, MFPAD_xy, ctetha_RCL, ctheta_xaxis_RCL, ctheta_cred, run_one=0)\n",
+    "import_MFPAD(fileSCR, MFPAD_SCR, cosphi, MFPAD_xy, ctetha_SCR, ctheta_xaxis_SCR, ctheta_cred, run_one=0)\n",
+    "import_MFPAD(fileSCL, MFPAD_SCL, cosphi, MFPAD_xy, ctetha_SCL, ctheta_xaxis_SCL, ctheta_cred, run_one=0)\n",
+    "\n",
+    "# converting into nparray\n",
+    "MFPAD_RCR=np.array(MFPAD_RCR); ctetha_RCR=np.array(ctetha_RCR); ctheta_xaxis_RCR=np.array(ctheta_xaxis_RCR)\n",
+    "MFPAD_RCL=np.array(MFPAD_RCL); ctetha_RCL=np.array(ctetha_RCL); ctheta_xaxis_RCL=np.array(ctheta_xaxis_RCL)\n",
+    "MFPAD_SCR=np.array(MFPAD_SCR); ctetha_SCR=np.array(ctetha_SCR); ctheta_xaxis_SCR=np.array(ctheta_xaxis_SCR)\n",
+    "MFPAD_SCL=np.array(MFPAD_SCL); ctetha_SCL=np.array(ctetha_SCL); ctheta_xaxis_SCL=np.array(ctheta_xaxis_SCL)"
    ]
   },
   {
@@ -179,6 +198,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.array(ctetha_RCR).shape)\n",
+    "ctetha_RCR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -186,44 +215,6 @@
    "source": [
     "print(ctetha_RCR[0].shape)\n",
     "ctetha_RCR[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#need to take the centre\n",
-    "print(ctheta_c.shape)\n",
-    "ctheta_c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# ctheta_cred = (ctheta_c[1:] + ctheta_c[:-1])/2\n",
-    "# print(ctheta_cred.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "print(type(temp[0]),temp[0].shape, len(MFPAD_RCR))\n",
-    "temp[0]\n",
-    "temp[1]"
    ]
   },
   {
@@ -240,7 +231,8 @@
     "\n",
     "errPECD = np.sqrt(1/(ctetha_RCR+ctetha_RCL))\n",
     "\n",
-    "cPECD.shape"
+    "print(cPECD.shape)\n",
+    "print(cPECD_norm[0].shape)"
    ]
   },
   {
@@ -249,7 +241,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(ctheta_cred,cPECD_norm[0])"
+    "print(ctheta_xaxis_RCR.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(ctetha_RCR[0],cPECD_norm[0])"
    ]
   },
   {
