loading session added

--- a/3D_MFPADs_plotly_triangualtion.ipynb
+++ b/3D_MFPADs_plotly_triangualtion.ipynb
@@ -6,9 +6,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TRIANGULATION\n",
+    "import glob\n",
+    "import math\n",
+    "import uproot\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pkgutil\n",
+    "import uproot_methods\n",
+    "\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import LightSource\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import mplhep as hep\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
     "from scipy.spatial import Delaunay\n",
     "\n",
+    "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
+    "\n",
+    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV' # use your path\n",
+    "all_files = glob.glob(path + \"/*.dat\")\n",
+    "\n",
+    "li = []\n",
+    "colnames=[\"phi\",\"cos(theta)\",\"value\"] \n",
+    "\n",
+    "# how to load multiple files http://jonathansoma.com/lede/foundations-2017/classes/working-with-many-files/class/\n",
+    "for filename in all_files:\n",
+    "    df = pd.read_csv(filename, delimiter=r\"\\s+\", names=colnames, header=None) \n",
+    "    # or delim_whitespace=True, it is faste\n",
+    "    # r\"\\s+\" is a regex (regular expression)\n",
+    "    df[\"filename\"]=filename.split(\"\\\\\")[-1].split(\".\")[0] # adding a column with the file name\n",
+    "    df[\"filename\"]=df[\"filename\"].str.replace(\" \",\"\") # corrects for spaces\n",
+    "    df[\"filename\"]=df[\"filename\"].astype(\"category\")\n",
+    "    li.append(df) # a unique DataFrame\n",
+    "\n",
+    "frame = pd.concat(li, axis=0)\n",
+    "frame_srt=frame.groupby(\"filename\")\n",
+    "frame.loc[frame[\"filename\"] == \"1_1\"] # first way of selecting the right file\n",
+    "frame_set = frame.set_index(\"filename\") # build a multiindex using the categories of filename\n",
+    "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\n",
+    "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\n",
+    "counts = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,2].to_numpy() # counts\n",
+    "\n",
+    "#Forcing the values at the edges of +-phi to be the same avg\n",
+    "test11=frame.loc[frame[\"filename\"] == \"1_1\"]\n",
+    "a1=test11.loc[test11[\"phi\"] == np.min(phi)][\"value\"].to_numpy()\n",
+    "b1=test11.loc[test11[\"phi\"] == np.max(phi)][\"value\"].to_numpy()\n",
+    "avgphi=np.divide(a1+b1,2)\n",
+    "avgphi=np.pad(avgphi, (0,len(phi)-len(avgphi)), 'constant', constant_values=0)\n",
+    "# avgphipd = pd.Series(avgphi)\n",
+    "test11[\"value\"].mask(test11[\"phi\"] == np.min(phi), avgphi, inplace=True)\n",
+    "test11[\"value\"].mask(test11[\"phi\"] == np.max(phi), avgphi, inplace=True)\n",
+    "\n",
+    "#Forcing the values at the edges of +-ctheta to be the same avg\n",
+    "a2=test11.loc[test11[\"cos(theta)\"] == np.min(ctheta)][\"value\"].to_numpy()\n",
+    "b2=test11.loc[test11[\"cos(theta)\"] == np.max(ctheta)][\"value\"].to_numpy()\n",
+    "avgcos=np.divide(a2+b2,2)\n",
+    "avgcos=np.pad(avgcos, (0,len(ctheta)-len(avgcos)), 'constant', constant_values=0)\n",
+    "# avgcospd = pd.Series(avgcos)\n",
+    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.min(ctheta), avgcos, inplace=True)\n",
+    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.max(ctheta), avgcos, inplace=True)\n",
+    "\n",
+    "counts_fixed = test11.iloc[:,2].to_numpy()\n",
+    "phi_fixed = np.where(phi==np.min(phi), -180., phi) #the last is an else\n",
+    "phi_fixed = np.where(phi==np.max(phi), 180., phi_fixed)\n",
+    "ctheta_fixed = np.where(ctheta==np.min(ctheta), -1., ctheta)\n",
+    "ctheta_fixed = np.where(ctheta==np.max(ctheta), 1., ctheta_fixed)\n",
+    "# print(np.unique(phi_fixed))\n",
+    "\n",
+    "# theta_rad = np.arccos(ctheta)\n",
+    "theta_rad = np.arccos(ctheta_fixed)\n",
+    "# phi_rad = phi * np.pi/180.\n",
+    "phi_rad = phi_fixed * np.pi/180.\n",
+    "# countsn = counts\n",
+    "countsn = counts_fixed\n",
+    "\n",
+    "# convertion to spherical coordinates 1D vectors of shape (2000,1)\n",
+    "x = countsn * np.sin(theta_rad) * np.cos(phi_rad)\n",
+    "X = x.reshape(100,200)\n",
+    "y = countsn * np.sin(theta_rad) * np.sin(phi_rad)\n",
+    "Y = y.reshape(100,200)\n",
+    "z = countsn * ctheta\n",
+    "Z = z.reshape(100,200)\n",
+    "\n",
+    "d = np.sqrt(x**2+y**2+z**2)\n",
+    "d_matrix = np.sqrt(X**2+Y**2+Z**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TRIANGULATION\n",
     "def triangulation_edges(points, faces, linewidth=1.5):\n",
     "    points = np.asarray(points)\n",
     "    faces = np.asarray(faces)\n",
