fix to the 3D plot forcing the endand the beginning to match, correct reshaping of the matrixes according to matplotlib, several other fixes to the pd dataframe

--- a/3D_MFPADs_plotly.ipynb
+++ b/3D_MFPADs_plotly.ipynb
@@ -51,19 +51,77 @@
     "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\r\n",
     "counts = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,2].to_numpy() # counts\r\n",
     "\r\n",
-    "theta_rad = np.arccos(ctheta)\r\n",
-    "phi_rad = phi * np.pi/180.\r\n",
+    "#Forcing the values at the edges of +-phi to be the same avg\r\n",
+    "test11=frame.loc[frame[\"filename\"] == \"1_1\"]\r\n",
+    "a1=test11.loc[test11[\"phi\"] == np.min(phi)][\"value\"].to_numpy()\r\n",
+    "b1=test11.loc[test11[\"phi\"] == np.max(phi)][\"value\"].to_numpy()\r\n",
+    "avgphi=np.divide(a1+b1,2)\r\n",
+    "avgphi=np.pad(avgphi, (0,len(phi)-len(avgphi)), 'constant', constant_values=0)\r\n",
+    "# avgphipd = pd.Series(avgphi)\r\n",
+    "test11[\"value\"].mask(test11[\"phi\"] == np.min(phi), avgphi, inplace=True)\r\n",
+    "test11[\"value\"].mask(test11[\"phi\"] == np.max(phi), avgphi, inplace=True)\r\n",
     "\r\n",
-    "# convertion to spherical coordinates 1D vectors of shape (2000,1)\r\n",
-    "x = counts * np.sin(theta_rad) * np.cos(phi_rad)\r\n",
-    "X = x.reshape(100,200)\r\n",
-    "y = counts * np.sin(theta_rad) * np.sin(phi_rad)\r\n",
-    "Y = y.reshape(100,200)\r\n",
-    "z = counts * ctheta\r\n",
-    "Z = z.reshape(100,200)\r\n",
+    "#Forcing the values at the edges of +-ctheta to be the same avg\r\n",
+    "a2=test11.loc[test11[\"cos(theta)\"] == np.min(ctheta)][\"value\"].to_numpy()\r\n",
+    "b2=test11.loc[test11[\"cos(theta)\"] == np.max(ctheta)][\"value\"].to_numpy()\r\n",
+    "avgcos=np.divide(a2+b2,2)\r\n",
+    "avgcos=np.pad(avgcos, (0,len(ctheta)-len(avgcos)), 'constant', constant_values=0)\r\n",
+    "# avgcospd = pd.Series(avgcos)\r\n",
+    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.min(ctheta), avgcos, inplace=True)\r\n",
+    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.max(ctheta), avgcos, inplace=True)\r\n",
+    "\r\n",
+    "counts_fixed = test11.iloc[:,2].to_numpy()\r\n",
+    "phi_fixed = np.where(phi==np.min(phi), -180., phi) #the last is an else\r\n",
+    "phi_fixed = np.where(phi==np.max(phi), 180., phi_fixed)\r\n",
+    "ctheta_fixed = np.where(ctheta==np.min(ctheta), -1., ctheta)\r\n",
+    "ctheta_fixed = np.where(ctheta==np.max(ctheta), 1., ctheta_fixed)\r\n",
+    "# print(np.unique(phi_fixed))\r\n",
+    "\r\n",
+    "theta_rad = np.arccos(ctheta)\r\n",
+    "# theta_rad = np.arccos(ctheta_fixed)\r\n",
+    "phi_rad = phi * np.pi/180.\r\n",
+    "# phi_rad = phi_fixed * np.pi/180.\r\n",
+    "countsn = counts\r\n",
+    "# countsn = counts_fixed\r\n",
+    "\r\n",
+    "# convertion to spherical coordinates 1D vectors of shape (20000,1)\r\n",
+    "x = countsn * np.sin(theta_rad) * np.cos(phi_rad)\r\n",
+    "X = x.reshape(200,100)\r\n",
+    "y = countsn * np.sin(theta_rad) * np.sin(phi_rad)\r\n",
+    "Y = y.reshape(200,100)\r\n",
+    "z = countsn * np.cos(theta_rad)\r\n",
+    "Z = z.reshape(200,100)\r\n",
     "\r\n",
     "d = np.sqrt(x**2+y**2+z**2)\r\n",
     "d_matrix = np.sqrt(X**2+Y**2+Z**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig=plt.figure()\r\n",
+    "fig.show()\r\n",
+    "ax=fig.add_subplot(111)\r\n",
+    "\r\n",
+    "# ax.plot(counts_fixed[0:200]-counts[0:200],c=\"b\",label='diff_counts[0:200]')\r\n",
+    "ax.plot(counts_fixed-counts,c=\"b\",label='diff_counts')\r\n",
+    "ax.plot(a1-b1,c=\"g\",label='diff_+phi_-phi')\r\n",
+    "ax.plot(a2-b2,c=\"y\",label='diff_+ctheta_-ctheta')\r\n",
+    "# ax.plot(avgcos[0:200]-counts[0:200],c=\"r\",label='diff_+avgcos_-counts[0:200]')\r\n",
+    "# ax.plot(avgphi[0:200]-counts[0:200],c=\"m\",label='diff_+avgphi_-counts[0:200]')\r\n",
+    "# ax.set_yscale('log')\r\n",
+    "plt.legend(loc=\"best\")\r\n",
+    "print(np.min(phi_fixed),np.max(phi_fixed),np.min(ctheta_fixed),np.max(ctheta_fixed))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test11.loc[test11[\"phi\"] == np.min(phi)][\"value\"]"
    ]
   },
   {
@@ -91,6 +149,32 @@
    "outputs": [],
    "source": [
     "# Go scatters do not provide a legend\r\n",
+    "fig = go.Figure(data=[go.Scatter3d(x=ctheta, y=phi, z=counts,\r\n",
+    "                    mode='markers',\r\n",
+    "                    # mode='lines',\r\n",
+    "                    marker=dict(\r\n",
+    "                    size=1.5,\r\n",
+    "                    colorscale='Viridis',   # choose a colorscale\r\n",
+    "                    opacity=0.85,\r\n",
+    "                    showscale=True          # to show the legend according to the color\r\n",
+    "                   )\r\n",
+    "                )])\r\n",
+    "\r\n",
+    "fig.update_layout(title=\"TFMeOx MFPADs spherical coordinates\",\r\n",
+    "                  width=500,\r\n",
+    "                  height=500,\r\n",
+    "                  margin=dict(l=65, r=50, b=65, t=90))\r\n",
+    "                #   margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go scatters do not provide a legend\r\n",
     "fig = go.Figure(data=[go.Scatter3d(x=x, y=y, z=z,\r\n",
     "                    mode='markers',\r\n",
     "                    marker=dict(\r\n",
@@ -101,7 +185,68 @@
     "                        showscale=True          # to show the legend according to the color\r\n",
     "                   )\r\n",
     "                )])\r\n",
-    "fig.update_layout(title='TFMeOx MFPADs theory scattered',margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "\r\n",
+    "fig.update_layout(title=\"TFMeOx MFPADs theory scattered\",\r\n",
+    "                  width=500,\r\n",
+    "                  height=500,\r\n",
+    "                  margin=dict(l=65, r=50, b=65, t=90))\r\n",
+    "                #   margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the Z distribution has the ending and the starting data that aren't matching. This is regardless the reshaping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], x=X[0:200,0:100], y=Y[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\r\n",
+    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\r\n",
+    "                # width=500,\r\n",
+    "                # height=500,\r\n",
+    "                # margin=dict(l=65, r=50, b=65, t=90))\r\n",
+    "                  margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is possible to force the equality and therefore bridging the gap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fixing the stripe\r\n",
+    "Y[-1,0:100]=Y[0,0:100]\r\n",
+    "X[-1,0:100]=X[0,0:100]\r\n",
+    "Z[-1,0:100]=Z[0,0:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], x=X[0:200,0:100], y=Y[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\r\n",
+    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\r\n",
+    "                # width=500,\r\n",
+    "                # height=500,\r\n",
+    "                # margin=dict(l=65, r=50, b=65, t=90))\r\n",
+    "                  margin=dict(l=0, r=0, b=0, t=0))\r\n",
     "fig.show()"
    ]
   },
@@ -111,13 +256,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure(data=[go.Surface(z=Z, x=X, y=Y, surfacecolor=d_matrix, connectgaps=True)])\r\n",
-    "fig.update_layout(title='TFMeOx MFPADs theor surfy', autosize=False,\r\n",
+    "fig = go.Figure(data=[go.Surface(z=Z[0:200,0:100], surfacecolor=d_matrix, connectgaps=True)])\r\n",
+    "fig.update_layout(title='TFMeOx MFPADs theory surf', autosize=False,\r\n",
     "                #   width=500, height=500,\r\n",
     "                #   margin=dict(l=65, r=50, b=65, t=90))\r\n",
     "                  margin=dict(l=0, r=0, b=0, t=0))\r\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
