fix on the matrixes end = start

--- a/3D_MFPADs.ipynb
+++ b/3D_MFPADs.ipynb
@@ -214,11 +214,14 @@
     "ax.plot_surface(X,Y,Z)\n",
     "ax.title.set_text('surface (broken on the side)')\n",
     "\n",
+    "#fixing the stripe\n",
+    "Y[-1,0:100]=Y[0,0:100]\n",
+    "X[-1,0:100]=X[0,0:100]\n",
+    "Z[-1,0:100]=Z[0,0:100]\n",
     "\n",
-    "ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
-    "cs = ax.contour(X,Y,d_matrix, levels=30)\n",
-    "cs.changed()\n",
-    "ax.title.set_text('contour in 3D')\n",
+    "ax = fig.add_subplot(1, 2, 1, projection='3d')\n",
+    "ax.plot_surface(X,Y,Z)\n",
+    "ax.title.set_text('surface (fixed)')\n",
     "\n",
     "plt.show()"
    ]
