high binning: a bit too crowded

--- a/contrast_map.ipynb
+++ b/contrast_map.ipynb
@@ -59,6 +59,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#low fixed binning\n",
+    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "histRCR = fileRCR[path]\n",
     "histSCR = fileSCR[path]\n",
     "histRCL = fileRCL[path]\n",
